--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -45,4 +45,30 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:background="@drawable/yellow_shadow"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:padding="10dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+
+            <TextView
+                android:fontFamily="@font/cm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Speech Settings"
+                android:textSize="20sp"
+                android:textColor="#fff"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
