--- a/app/src/main/res/drawable-v24/bg_3.xml
+++ b/app/src/main/res/drawable-v24/bg_3.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#f75435" />
+    <solid android:color="#fa6e4f" />
     <corners android:radius="7dp" />
 </shape>
