--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -56,7 +56,7 @@
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:background="@drawable/red_shadow"
+                android:background="@drawable/bg_1"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
